# tabcode-haskell

./: README.md  TabCode.cabal
prog/: Checker.hs  TC2MEI-js.hs  TC2MEI.hs
src/: Checker.hs  TC2MEI.hs  TabCode.hs
src/TabCode/: MEI.hs  MEISerialiser.hs  Options.hs  Parser.hs  Types.hs
src/TabCode/MEI/: Elements.hs  Serialiser.hs  Types.hs
src/TabCode/Serialiser/MEIXML/: Converter.hs  Elements.hs  Serialiser.hs  Types.hs
tests/: MEITests.hs  ParseTests.hs
