name: TabCode
version: 0.1
synopsis: A parser for the Tabcode lute tablature language
author: Richard Lewis
license: GPL
build-type: Simple
cabal-version: >= 1.9.2

library
  build-depends: base >= 4 && < 5
               , bytestring
               , containers
               , optparse-applicative
               , parsec
               , parsec-numbers
               , text
               , vector
               , xmlgen
  exposed-modules: TabCode
                 , TabCode.MEI.Serialiser
                 , TabCode.Options
                 , TabCode.Parser
  hs-source-dirs: src
  ghc-options: -O2

executable tccheck
  build-depends: base >= 4 && < 5
               , containers
               , optparse-applicative
               , parsec
               , parsec-numbers
               , vector
  main-is: Checker.hs
  hs-source-dirs: src
  other-modules: TabCode
               , TabCode.Options
               , TabCode.Parser
  ghc-options: -O2

executable tc2mei
  build-depends: base >= 4 && < 5
               , bytestring
               , containers
               , optparse-applicative
               , parsec
               , parsec-numbers
               , text
               , vector
               , xmlgen
  main-is: TC2MEI.hs
  hs-source-dirs: src
  other-modules: TabCode
               , TabCode.MEI.Serialiser
               , TabCode.Options
               , TabCode.Parser
  ghc-options: -O2

test-suite parse-tests
  type: detailed-0.9
  test-module: ParseTests
  build-depends: base >= 4 && < 5
               , Cabal >= 1.9.2
               , containers
               , optparse-applicative
               , parsec
               , parsec-numbers
               , vector
  hs-source-dirs: src, tests
  other-modules: TabCode
               , TabCode.Options
               , TabCode.Parser

test-suite mei-tests
  type: detailed-0.9
  test-module: MEITests
  build-depends: base >= 4 && < 5
               , bytestring
               , Cabal >= 1.9.2
               , containers
               , HaXml
               , optparse-applicative
               , parsec
               , parsec-numbers
               , text
               , vector
               , xmlgen
  hs-source-dirs: src, tests
  other-modules: TabCode
               , TabCode.MEISerialiser
               , TabCode.Options
               , TabCode.Parser
