name: TabCode
version: 1.2.0
synopsis: A parser for the Tabcode lute tablature language
author: Richard Lewis
maintainer: richard@rjlewis.me.uk
copyright: (C) 2015-2017 Richard Lewis
license: GPL
build-type: Simple
cabal-version: >= 1.9.2

library
  build-depends: base >= 4 && < 5
               , bytestring
               , containers
               , optparse-applicative
               , parsec
               , parsec-numbers
               , text
               , vector
               , xmlgen
  exposed-modules: TabCode.Types
                 , TabCode.Serialiser.MEIXML.Converter
                 , TabCode.Serialiser.MEIXML.Elements
                 , TabCode.Serialiser.MEIXML.Serialiser
                 , TabCode.Serialiser.MEIXML.Types
                 , TabCode.Options
                 , TabCode.Parser
  hs-source-dirs: src
  ghc-options: -O2

executable tccheck
  build-depends: base >= 4 && < 5
               , optparse-applicative
               , TabCode
  main-is: Checker.hs
  hs-source-dirs: prog
  ghc-options: -O2

executable tc2mei
  build-depends: base >= 4 && < 5
               , bytestring
               , optparse-applicative
               , TabCode
               , xmlgen
  main-is: TC2MEI.hs
  hs-source-dirs: prog
  ghc-options: -O2

test-suite parse-tests
  type: detailed-0.9
  test-module: ParseTests
  build-depends: base >= 4 && < 5
               , Cabal >= 1.9.2
               , TabCode
               , vector
  hs-source-dirs: tests

test-suite mei-tests
  type: detailed-0.9
  test-module: MEITests
  build-depends: base >= 4 && < 5
               , bytestring
               , Cabal >= 1.9.2
               , HaXml
               , TabCode
               , text
               , xmlgen
  hs-source-dirs: tests
