name: TabCode
version: 1.2.1
synopsis: A parser for the Tabcode lute tablature language
author: Richard Lewis
maintainer: richard@rjlewis.me.uk
copyright: (C) 2015-2017 Richard Lewis
license: GPL
build-type: Simple
cabal-version: >= 1.9.2

library
  build-depends: base >= 4.8 && < 5
               , containers >= 0.5.7.1 && < 0.6
               , optparse-applicative >= 0.14 && < 0.15
               , parsec >= 3.1.11 && < 3.2
               , parsec-numbers >= 0.1 && < 0.2
               , text >= 1.2.2.2 && < 1.3
               , vector >= 0.12.0.1 && < 0.13
               , xmlgen >= 0.6.2.1 && < 0.7
  exposed-modules: TabCode.Types
                 , TabCode.Serialiser.MEIXML.Converter
                 , TabCode.Serialiser.MEIXML.Elements
                 , TabCode.Serialiser.MEIXML.Serialiser
                 , TabCode.Serialiser.MEIXML.Types
                 , TabCode.Options
                 , TabCode.Parser
  hs-source-dirs: src
  ghc-options: -O2

executable tccheck
  build-depends: base >= 4.8 && < 5
               , optparse-applicative >= 0.14 && < 0.15
               , TabCode
  main-is: Checker.hs
  hs-source-dirs: prog
  ghc-options: -O2 -threaded

executable tc2mei
  build-depends: base >= 4.8 && < 5
               , bytestring >= 0.10.8.1 && < 0.11
               , optparse-applicative >= 0.14 && < 0.15
               , TabCode
               , xmlgen >= 0.6.2.1 && < 0.7
  main-is: TC2MEI.hs
  hs-source-dirs: prog
  ghc-options: -O2 -threaded

test-suite parse-tests
  type: detailed-0.9
  test-module: ParseTests
  build-depends: base >= 4.8 && < 5
               , Cabal >= 1.9.2
               , TabCode
               , vector >= 0.12.0.1 && < 0.13
  hs-source-dirs: tests

test-suite mei-tests
  type: detailed-0.9
  test-module: MEITests
  build-depends: base >= 4.8 && < 5
               , bytestring >= 0.10.8.1 && < 0.11
               , Cabal >= 1.9.2
               , HaXml >= 1.25.4 && < 1.26
               , parsec >= 3.1.11 && < 3.2
               , TabCode
               , text >= 1.2.2.2 && < 1.3
               , xmlgen >= 0.6.2.1 && < 0.7
  hs-source-dirs: tests
